Tue Nov 12 22:07:55 1996  Tom Yu  <tlyu@mit.edu>

	* osconfig.c: Remove krb5_defkeyname to catch other things that
	may break.

	* ktdefname.c (krb5_kt_default_name): Change logic to no longer
	use a global variable; also add krb5_kt_set_default_name() to
	allow for the changing of the default keytab name in the context.

Wed Nov  6 16:24:56 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_os_ctx.c (os_init_paths): Don't ignore errors found from
		parsing the config file.  Currently, we return an error if
		the profile isn't found.  In the future we can maybe do
		something better with intelligent defaulting if krb5.conf
		doesn't exist, but we don't have this today.

Thu Aug 22 15:19:47 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* an_to_ln.c (db_an_to_ln): Remove references to dead BERK_DB_DBM
	 	code.

Tue Jul 30 19:15:55 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* Makefile.in (check-unix): Comment out an_2_ln tests that use
        database.

	* an_to_ln.c (krb5_aname_to_localname): Make the db lookup verison
        of aname_2_localname optional.

Sun Jul 28 22:39:12 1996  Tom Yu  <tlyu@mit.edu>

	* an_to_ln.c (aname_do_match): #elif HAVE_REGEXP_H should have
		been HAVE_REGEXPR_H

Fri Jul 26 15:58:32 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in, an_to_ln.c (do_replacement, aname_do_match): use
 	the compile() function in -lgen on solaris.  Check for the
 	relevant stuff at configure-time

Fri Jul 12 21:38:15 1996  Marc Horowitz  <marc@mit.edu>

	* ktdefname.c (krb5_kt_default_name): allow the default keytab name
	to be specified in the config file.

Wed Jun 12 01:12:32 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* net_read.c (krb5_net_read):
	* net_write.c (krb5_net_write): In case of an error, on Windows
		machines, set errno from SOCKET_ERRNO, since the interface
		assumes the error is passed back the errno global
		varaible.  This really needs to be fixed sometime...

	* read_msg.c: If ECONNABORTED is not defined, try using the