@@ -1,3 +1,8 @@
+Wed Nov 13 02:53:31 1996  Tom Yu  <tlyu@mit.edu>
+
+	* ktdefname.c (krb5_kt_default_name): Fix a few memory-leak type
+	problems in previous changes.
+
 Tue Nov 12 22:07:55 1996  Tom Yu  <tlyu@mit.edu>
 
 	* osconfig.c: Remove krb5_defkeyname to catch other things that
